@startuml

left to right direction
skinparam linetype ortho

' ========================
' Interface Layer
' ========================
package "Interface Layer" {
    class InterfaceController {
        + registerUser(email: String, password: String, createdAt: String) : String
        + createTaskList(userId: String, name: String) : String
        + createTask(taskListId: String, title: String, description: String, status: String, priority: String, dueDate: String) : String
        + createTag(userId: String, name: String) : String
        + assignTagToTask(taskId: String, tagId: String) : String
    }
}
' ========================
' Domain Layer
' ========================
package "Domain Layer" {
    class User {
        - id: String
        - email: String
        - password: String
        - createdAt: Date
        + authenticate(): boolean
    }

    class TaskList {
        - id: String
        - name: String
        - user_id: String
        + addTask(task: Task)
        + removeTask(task: Task)
    }

    class Task {
        - id: String
        - title: String
        - description: String
        - status: String
        - priority: String
        - dueDate: Date
        - createdAt: Date
        - updatedAt: Date
        - taskList_id: String
        + markAsDone()
    }

    class Tag {
        - id: String
        - name: String
        - user_id: String
    }

    class TaskTagRelation {
        - task_id: String
        - tag_id: String
    }
    class DomainController {
        + createUser(email: String, password: String, createdAt: String) : String
        + createTaskList(userId: String, name: String) : String
        + createTask(taskListId: String, title: String, description: String, status: String, priority: String, dueDate: String) : String
        + createTag(userId: String, name: String) : String
        + assignTagToTask(taskId: String, tagId: String) : String
    }
}

' ========================
' Persistence Layer
' ========================
package "Persistence Layer" {
    class PersistenceController {
        + saveUser(userAsString: String) : String
        + saveTask(taskAsString: String) : String
        + saveTaskList(taskListAsString: String) : String
        + saveTag(tagAsString: String) : String
        + saveTaskTag(taskTagAsString: String) : String
        + findUser(idAsString: String) : String
        + findTask(idAsString: String) : String
        + findTaskList(idAsString: String) : String
        + findTag(idAsString: String) : String
    }
}


' ========================
' Relationships
' ========================

' Domain relationships
User "1" -- "0..*" TaskList : owns
TaskList "1" -- "0..*" Task : contains
User "1" -- "0..*" Tag : owns
Task "0..*" -------- "0..*" Tag : tagged via TaskTagRelation

' Interface → Domain
InterfaceController ..> DomainController

' Domain → Persistence
DomainController ..> PersistenceController


' Domain classes
DomainController ..> User
DomainController ..> TaskList
DomainController ..> Task
DomainController ..> Tag
DomainController ..> TaskTagRelation

@enduml
